2006-09-04  Daiki Ueno  <ueno@unixuser.org>

	* pgg-gpg.el (pgg-gpg-process-region): Revert two patches from Satyaki
	Das.  http://article.gmane.org/gmane.emacs.gnus.general/49947
	http://article.gmane.org/gmane.emacs.gnus.general/50457

2006-09-03  Chong Yidong  <cyd@stupidchicken.com>

	* cus-edit.el (custom-group-menu-create): Avoid deactivating the
	mark after running the menu filter.

2006-09-03  Juri Linkov  <juri@jurta.org>

	* international/quail.el (quail-defrule-internal): Add a check
	if a key is a vector.

2006-09-02  Juri Linkov  <juri@jurta.org>

	* man.el (Man-topic-history): New variable.
	(man): Use it.

	* woman.el (woman-topic-history): Change defvar to defvaralias
	for symbol `Man-topic-history'.

	* shell.el (shell-filter-ctrl-a-ctrl-b): Check if
	`comint-last-output-start' is a marker by using `markerp' and
	check if it has a position by using `marker-position', and use
	this position for `goto-char'.

	* international/quail.el (quail-defrule-internal): Add missing
	`error' call for null key.

2006-09-02  Ryan Yeske  <rcyeske@gmail.com>

	* rcirc.el (rcirc-keywords): New variable.
	(rcirc-bright-nicks, rcirc-dim-nicks): New variables.
	(rcirc-bright-nick-regexp, rcirc-dim-nick-regexp): Remove
	variables.
	(rcirc-responses-no-activity): New function.
	(rcirc-handler-generic): Check for responses in above.
	(rcirc-process-command): Add ?: character to arguments of raw
	server commands.
	(rcirc-format-response-string): Use `rcirc-bright-nicks' and
	`rcirc-dim-nicks'.
	(rcirc-gray-toggle): Remove unused variable.
	(rcirc-print): Remove some tracking logic, which is moved into
	markup functions.
	(rcirc-activity-types): Was `rcirc-activity-type', now a list of
	types.
	(rcirc-activity-string): Look for 'keyword in activity-types.
	(rcirc-window-configuration-change): Don't erase overlay-arrow
	unnecessarily.
	(rcirc-add-or-remove): New function.
	(rcirc-cmd-ignore): Use it.
	(rcirc-message-leader): Remove unused function.